--- a/index.html
+++ b/index.html
@@ -2,75 +2,13 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Roomed</title>
+	<title>Healing Stillness</title>
 	<link rel="stylesheet" href="_/css/styles.css">
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
-	<header>
-		<div class="hero">
-			<section class="layout">
-				<div class="branding"><a href=""><img src="images/misc/something.svg" alt="Something"></a></div>
-			</section>
-		</div>
-		<div class="navigation">
-			<section class="layout">
-				<ul class="nav">
-					<li><a href="#">Home</a></li>
-					<li><a href="#">About us</a></li>
-					<li><a href="#">Speakers</a></li>
-					<li><a href="#">Sponsors</a></li>
-					<li><a href="#">Contact us</a></li>
-				</ul>
-			</section>
-		</div>
-	</header>
-	<div class="speakerslist">
-		<section class="layout">
-			<h1>Speaking at next meeting</h1>
-		</section>
-		<div class="speakers">
-			<article class="artist">
-				<h3>lorenzo</h3>
-				<p><a href="#"><img src="images/speakers/lorenzo.png" alt="photo of lorenzo" class="speaker"></a></p>
-				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quidem a vitae nulla ea rerum accusantium ad fugiat quibusdam enim distinctio odio unde natus expedita quisquam pariatur quam, error, ipsam, earum!</p>
-			</article>
-			<article class="artist">
-				<h3>hillary</h3>
-				<p><a href="#"><img src="images/speakers/hillary.png" alt="photo of hillary" class="speaker"></a></p>
-				<p>Asperiores qui nulla esse dolorem cupiditate, culpa error soluta, aut placeat numquam, reiciendis libero sed odio unde molestiae, vitae aperiam. Recusandae voluptate ex, vitae maiores voluptatibus quasi similique officiis assumenda.</p>
-			</article>
-			<article class="artist">
-				<h3>riley</h3>
-				<p><a href="#"><img src="images/speakers/riley.png" alt="photo of riley" class="speaker"></a></p>
-				<p>Debitis dicta ex eveniet illo perferendis molestiae, ipsa dolorum voluptatum hic iusto quod autem soluta optio. Ipsa commodi, similique dolorum asperiores non expedita eum in omnis aspernatur, repellendus quam officiis!</p>
-			</article>
-		</div>
-	</div>
-	<section class="layout">
-		<div class="primary">
-			<articles id="idname1"></articles>
-			<articles id="idname2"></articles>
-			<articles id="idname3"></articles>
-		</div>
-		<aside class="secondary">
-			<article id="idname01"></article>
-			<article id="idname02"></article>
-			<article id="idname03"></article>
-		</aside>
-	</section>
-	<footer>
-		<section class="layout">
-			<div class="socialmediaicons">
-				<span class="title">join the movement:</span>
-				<ul>
-					<li><a href="http://twitter.com"><img src="images/socialmedia/twitter.png" alt="icon for twitter" class="icons"></a></li>
-					<li><a href="http://facebook.com"><img src="images/socialmedia/facebook.png" alt="icon for facebook" class="icons"></a></li>
-					<li><a href="http://meetup.com"><img src="images/socialmedia/meetup.png" alt="icon for meetup" class="icons"></a></li>
-				</ul>
-			</div>
-		</section>
-	</footer>
+	
+	
 	<script src="_js/script.js"></script>
 	<script src="http://localhost:35729/livereload.js"></script>
 </body>
